Colaboratory를 통해 생성됨

--- a/team.ipynb
+++ b/team.ipynb
@@ -6,7 +6,7 @@
       "name": "team.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNXedy/abCUuy0mxi6JT5P7",
+      "authorship_tag": "ABX9TyOQmX7pfw2AqIUr1nReN7+U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,23 +59,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "g5-16zXqGt6-",
-        "outputId": "00a70fb8-590e-4f3a-b618-55cd326c75f8"
+        "outputId": "3944e9b7-bdca-4571-c810-6400926e504c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "책\n",
-            "['21376212', '22437288', '22445762', '22432910']\n",
-            "['이것은 작은 브랜드를 위한 책', '헤르만 헤세의 책이라는 세계(개정판)(양장본 HardCover)', '책들의 부엌', '헤세의 책 읽기와 글쓰기']\n",
-            "['14220', '19800', '13050', '13500']\n"
+            "맑음\n",
+            "['22434323', '20672966', '14633314', '22348247', '21300590', '20672961', '16273791', '20672962', '22308993', '20578114', '16310882', '20711858', '17804911', '20870015', '22250306', '20740841', '10504390', '16331547', '17891177', '13298290']\n",
+            "['내일 맑음', '집 떠난 뒤 맑음(상&하) + 다이어리 세트', '5월 18일, 맑음', '기억맑음(전3권)', '여행은 맑음, 때때로 흐림', '집 떠난 뒤 맑음', '맑음이와 여우 할머니', '집 떠난 뒤 맑음', '오늘 내 기분은 맑음', '꽃보다 맑음', '오늘의 인사총무, 맑음', '맑음, 때때로 소나기', '꽃보다 맑음', '오늘의 날‘시’는 흐린 뒤 맑음', '제주는 맑음', '소설, 때때로 맑음', '꽃보다 맑음', '오늘의 인생 날씨, 차차 맑음', '세상은 맑음', '오늘의 나이, 대체로 맑음']\n",
+            "['11700', '24840', '11520', '39200', '11250', '12420', '9000', '12420', '9900', '4500', '11700', '10350', '4500', '10500', '11520', '17820', '12600', '12600', '12150']\n"
           ]
         }
       ],
@@ -86,7 +86,6 @@
         "import time\n",
         "\n",
         "title=[]\n",
-        "publisher=[]\n",
         "price=[]\n",
         "\n",
         "def get_data(url):\n",
@@ -103,18 +102,28 @@
         "    for book_one in book:\n",
         "      b_id=book_one.a['href'].split('=')[1]\n",
         "      bid.append(b_id)\n",
-        "    #print(bid)\n",
+        "    print(bid)\n",
         "\n",
         "    for book_one in book:\n",
         "      b_title=book_one.img['alt']\n",
         "      title.append(b_title)\n",
-        "    #print(title)\n",
+        "    print(title)\n",
         "\n",
         "    attrs={'class': 'price'}\n",
         "    b_price=soup.find_all('em', attrs=attrs)\n",
         "    for i in b_price:\n",
         "      price.append(i.get_text().split('원')[0])\n",
-        "    #print(price)\n",
+        "    print(price)\n",
+        "\n",
+        "    f = open(\"test.csv\", \"w\", encoding='utf-8')\n",
+        "    writer = csv.writer(f)\n",
+        "    test = [['bid', 'title', 'price']]\n",
+        "    writer.writerows(test)\n",
+        "\n",
+        "    k=len(title)\n",
+        "    for i in range(k-1):\n",
+        "      row = [[bid[i], title[i], price[i]]]\n",
+        "      writer.writerows(row)\n",
         "\n",
         "  else:\n",
         "    print('접속실패')\n",
