--- a/team.ipynb
+++ b/team.ipynb
@@ -41,7 +41,7 @@
         "id": "eYRY8j34Gum_",
         "outputId": "f47b32aa-e370-42e7-d83e-8a2b4b892a82"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -64,13 +64,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "g5-16zXqGt6-",
-        "outputId": "2b3fe36c-e4c9-4e6c-c5a4-8573b9a1646a"
+        "outputId": "2655d78a-21d0-44c3-9e06-2d697fd51c72"
       },
       "outputs": [
         {
@@ -86,18 +86,19 @@
             "4   20711858               맑음, 때때로 소나기  10350\n",
             "5   20870015         오늘의 날‘시’는 흐린 뒤 맑음  10500\n",
             "6   21300590            여행은 맑음, 때때로 흐림  11250\n",
-            "7   22250306                    제주는 맑음  11520\n",
-            "8   14633314                5월 18일, 맑음  11520\n",
+            "7   14633314                5월 18일, 맑음  11520\n",
+            "8   22250306                    제주는 맑음  11520\n",
             "9   16310882              오늘의 인사총무, 맑음  11700\n",
             "10  22434323                     내일 맑음  11700\n",
-            "11  17891177                    세상은 맑음  12150\n",
+            "11  13298290            오늘의 나이, 대체로 맑음  12150\n",
             "12  20672962                 집 떠난 뒤 맑음  12420\n",
-            "13  20672961                 집 떠난 뒤 맑음  12420\n",
-            "14  10504390                    꽃보다 맑음  12600\n",
-            "15  16331547          오늘의 인생 날씨, 차차 맑음  12600\n",
-            "16  20740841                소설, 때때로 맑음  17820\n",
-            "17  20672966  집 떠난 뒤 맑음(상&하) + 다이어리 세트  24840\n",
-            "18  22348247                 기억맑음(전3권)  39200\n"
+            "13  16331547          오늘의 인생 날씨, 차차 맑음  12600\n",
+            "14  17891177                    세상은 맑음  12600\n",
+            "15  20740841                소설, 때때로 맑음  17820\n",
+            "16  20672966  집 떠난 뒤 맑음(상&하) + 다이어리 세트  24840\n",
+            "17  20642455             Bestlo 맑음 교정학  26600\n",
+            "18  20861915             Bestlo 맑음 범죄학  30400\n",
+            "19  22348247                 기억맑음(전3권)  39200\n"
           ]
         }
       ],
@@ -138,6 +139,16 @@
         "    \n",
         "    for i in b_price:\n",
         "      price.append(i.get_text().split('원')[0])\n",
+        "\n",
+        "    f = open(\"test.csv\", \"w\", encoding='utf-8')\n",
+        "    writer = csv.writer(f)\n",
+        "    test = [['bid', 'title', 'price']]\n",
+        "    writer.writerows(test)\n",
+        "\n",
+        "    k=len(title)\n",
+        "    for i in range(k-1):\n",
+        "      row = [[bid[i], title[i], price[i]]]\n",
+        "      writer.writerows(row)\n",
         "    \n",
         "    int_price=list(map(int,price))\n",
         "    df=pd.DataFrame([x for x in zip(bid,title,int_price)], columns=['번호', '제목' ,'가격'])\n",
