Colaboratory를 통해 생성됨

--- a/team.ipynb
+++ b/team.ipynb
@@ -64,13 +64,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "g5-16zXqGt6-",
-        "outputId": "2655d78a-21d0-44c3-9e06-2d697fd51c72"
+        "outputId": "26ce37b5-ef9a-412a-e60d-377cd4a461c2"
       },
       "outputs": [
         {
@@ -146,7 +146,7 @@
         "    writer.writerows(test)\n",
         "\n",
         "    k=len(title)\n",
-        "    for i in range(k-1):\n",
+        "    for i in range(k):\n",
         "      row = [[bid[i], title[i], price[i]]]\n",
         "      writer.writerows(row)\n",
         "    \n",
