Colaboratory를 통해 생성됨

--- a/team.ipynb
+++ b/team.ipynb
@@ -64,13 +64,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 70,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "g5-16zXqGt6-",
-        "outputId": "26ce37b5-ef9a-412a-e60d-377cd4a461c2"
+        "outputId": "0112c25e-2a97-435f-a9b0-49f81ea10c87"
       },
       "outputs": [
         {
@@ -78,27 +78,8 @@
           "name": "stdout",
           "text": [
             "맑음\n",
-            "          번호                        제목     가격\n",
-            "0   20578114                    꽃보다 맑음   4500\n",
-            "1   17804911                    꽃보다 맑음   4500\n",
-            "2   16273791               맑음이와 여우 할머니   9000\n",
-            "3   22308993               오늘 내 기분은 맑음   9900\n",
-            "4   20711858               맑음, 때때로 소나기  10350\n",
-            "5   20870015         오늘의 날‘시’는 흐린 뒤 맑음  10500\n",
-            "6   21300590            여행은 맑음, 때때로 흐림  11250\n",
-            "7   14633314                5월 18일, 맑음  11520\n",
-            "8   22250306                    제주는 맑음  11520\n",
-            "9   16310882              오늘의 인사총무, 맑음  11700\n",
-            "10  22434323                     내일 맑음  11700\n",
-            "11  13298290            오늘의 나이, 대체로 맑음  12150\n",
-            "12  20672962                 집 떠난 뒤 맑음  12420\n",
-            "13  16331547          오늘의 인생 날씨, 차차 맑음  12600\n",
-            "14  17891177                    세상은 맑음  12600\n",
-            "15  20740841                소설, 때때로 맑음  17820\n",
-            "16  20672966  집 떠난 뒤 맑음(상&하) + 다이어리 세트  24840\n",
-            "17  20642455             Bestlo 맑음 교정학  26600\n",
-            "18  20861915             Bestlo 맑음 범죄학  30400\n",
-            "19  22348247                 기억맑음(전3권)  39200\n"
+            "노후 맑음\n",
+            "['예스24', '인터넷 교보문고', '알라딘', '영풍문고', '인터파크 도서', '도서11번가', '공부서점']\n"
           ]
         }
       ],
@@ -110,8 +91,12 @@
         "import pandas as pd\n",
         "import csv\n",
         "\n",
+        "keyword=input()\n",
+        "url=('https://book.naver.com/search/search.naver?sm=sta_hty.book&sug=&where=nexearch&query='+keyword)\n",
+        "\n",
         "title=[]\n",
         "price=[]\n",
+        "title_Q=[]\n",
         "\n",
         "def get_data(url):\n",
         "  response=requests.get(url)\n",
@@ -134,40 +119,68 @@
         "      title.append(b_title)\n",
         "    #print(title)\n",
         "\n",
-        "    attrs={'class': 'price'}\n",
-        "    b_price=soup.find_all('em', attrs=attrs)\n",
-        "    \n",
-        "    for i in b_price:\n",
-        "      price.append(i.get_text().split('원')[0])\n",
-        "\n",
         "    f = open(\"test.csv\", \"w\", encoding='utf-8')\n",
         "    writer = csv.writer(f)\n",
-        "    test = [['bid', 'title', 'price']]\n",
+        "    test = [['bid', 'title']]\n",
         "    writer.writerows(test)\n",
-        "\n",
-        "    k=len(title)\n",
+        "  \n",
+        "    k=len(bid)\n",
         "    for i in range(k):\n",
-        "      row = [[bid[i], title[i], price[i]]]\n",
+        "      row = [[bid[i], title[i]]]\n",
         "      writer.writerows(row)\n",
-        "    \n",
-        "    int_price=list(map(int,price))\n",
-        "    df=pd.DataFrame([x for x in zip(bid,title,int_price)], columns=['번호', '제목' ,'가격'])\n",
-        "    #print(price)\n",
+        "    f.close()\n",
         "\n",
-        "    df=df.sort_values(by='가격')\n",
-        "    df_reset=df.reset_index(drop=True)\n",
+        "    m=0\n",
+        "    title_q=input()\n",
+        "    for i in range(len(title)):\n",
+        "      if title_q==title[i]:\n",
+        "        m=i\n",
+        "        break\n",
         "\n",
-        "    df_reset.to_csv('book.csv')\n",
-        "    print(df_reset)\n",
+        "    key=bid[m]\n",
+        "    return key\n",
+        "   \n",
+        "  else:\n",
+        "    print('접속실패')\n",
+        "    print(response.status_code)\n",
         "\n",
+        "\n",
+        "key=get_data(url)\n",
+        "\n",
+        "\n",
+        "url=('https://book.naver.com/bookdb/book_detail.naver?bid='+key)\n",
+        "def get_data_2(url):\n",
+        "  response=requests.get(url)\n",
+        "  if response.status_code==200:\n",
+        "    html=response.text\n",
+        "    soup=BeautifulSoup(html, 'html.parser')\n",
+        "\n",
+        "    attrs={'class': 'thumb_type thumb_type2'}\n",
+        "    book=soup.find_all('div', attrs=attrs)\n",
+        "    book_one=soup.find('div', attrs=attrs)\n",
+        "\n",
+        "    attrs={'title': '새창'}\n",
+        "    book_q=soup.find_all('a', attrs=attrs)\n",
+        "\n",
+        "    for i in book_q:\n",
+        "      title_Q.append(i.get_text())\n",
+        "\n",
+        "    f = open(\"book.csv\", \"w\", encoding='utf-8')\n",
+        "    writer = csv.writer(f)\n",
+        "    book = [['title_Q']]\n",
+        "    writer.writerows(book)\n",
+        "\n",
+        "    k=len(title_Q)\n",
+        "    for i in range(k):\n",
+        "      row = [[title_Q[i]]]\n",
+        "      writer.writerows(row)\n",
+        "    f.close()\n",
         "\n",
         "  else:\n",
         "    print('접속실패')\n",
         "    print(response.status_code)\n",
         "\n",
-        "keyword=input()\n",
-        "url=('https://book.naver.com/search/search.naver?sm=sta_hty.book&sug=&where=nexearch&query='+keyword)\n",
-        "get_data(url)"
+        "get_data_2(url)"
       ]
     }
   ]
